--- a/style.css
+++ b/style.css
@@ -42,3 +42,71 @@ margin-bottom: 16px;
      font-size: 72px;
      font-weight: 900;
 }
+/* header style ends here */
+
+
+
+
+/* shared styles */
+
+/* main section {
+     margin-top: 120px;
+     margin-bottom: 120px;
+} */
+
+
+
+
+
+/* main style starts here */
+ .offer-container{
+     width: 802.9px;
+height: 806px;
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+margin: 120px auto;
+
+ }
+
+ .offer-content {
+     text-align: center;
+     display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+height: 600px;
+ }
+
+
+ .offer-content h1{
+     font-size: 88px;
+font-weight: 700;
+color: rgb(255, 0, 0);
+ }
+.offer-content p{
+     font-size: 24px;
+font-weight: 500;
+color: rgb(255, 0, 0);
+margin-top: 48px;
+margin-bottom: 16px;
+}
+
+.offer-content h3{
+     font-size: 48px;
+font-weight: 700;
+color: rgb(7, 2, 17);
+margin-bottom: 48px;
+}
+
+
+ .offer-image{
+     width: 802.9px;
+height: 500px;
+border: 2px dashed rgba(0, 0,0,0.2)
+ }
+ .offer-image img{
+     width: 100%;
+     height: 100%;
+ }
